--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Install Dependencies
         run: |
           choco install -y mingw cmake
-          refreshenv
-          # Add CMake to PATH
+          # Manually add CMake and MinGW to PATH
           echo "C:\\Program Files\\CMake\\bin" >> $env:GITHUB_PATH
+          echo "C:\\Program Files\\mingw-w64\\mingw64\\bin" >> $env:GITHUB_PATH
 
       # Step 3: Configure the build with CMake
       - name: Configure Build
@@ -32,7 +32,7 @@ jobs:
           cd build
           cmake -G "MinGW Makefiles" ..
 
-      # Step 4: Build the project using MinGW
+      # Step 4: Build with MinGW
       - name: Build with MinGW
         run: |
           cd build
